--- a/style.css
+++ b/style.css
@@ -1,38 +1,21 @@
 body{
-    background-color:grey;
-
-    
+    background-color: #212121;
+    color: #fff;
 }
-h1{
-    padding: 20px;
-    background-color: black;
-    color: white;
-    text-align: center;
-}
-p{
-    color: white;
-    text-align: center;
-    font-size: 30px;
-}
-#guess{
+.center{
     display: flex;
+    height: 100vh;
     justify-content: center;
-    font-size: 60px;
-    color: white;
+    align-items: center;
+    flex-direction: column;
 }
-#guessField{
-    display: flex;
-    margin-top: 15px;
-   margin-left: 45%;
-   padding: 20px;
-   border:4px solid lightsalmon;
+#clock{
+    font-size: 40px;
+    background-color: orange;
+    padding: 20px 50px;
+    border-radius: 10px;
+    margin-top: 10px;
 }
-#subt{
-    margin-left: 46%;
-    margin-top: 20px;
-    background-color: black;
-    color: white;
-    padding: 20px;
-    border-radius: 20px;
-    font-size: 20px;
+#banner{
+    font-size: 50px;
 }
